--- a/src/main/resources/templates/vocation/vocation-menu.html
+++ b/src/main/resources/templates/vocation/vocation-menu.html
@@ -241,7 +241,7 @@
 </head>
 <section>
     <div class="table-content m-2">
-        <h5 style="font-weight: 700;">График отпусков</h5>
+        <h5 style="font-weight: 700">График отпусков</h5>
         <hr>
         <form th:action="@{/general/vocation}" th:method="get">
             <table class="table table-hover table-sm" style="margin-bottom: 0; width: 1835px">
@@ -729,5 +729,4 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
